--- a/assets/HtmlErrorRenderer/styles.css
+++ b/assets/HtmlErrorRenderer/styles.css
@@ -16,7 +16,7 @@
  * Author:   Joan Fabrégat <joan@codeinc.fr>
  * Date:     19/02/2018
  * Time:     14:14
- * Project:  lib-errordisplay
+ * Project:  ErrorRenderer
  */
 
 div.exception-report {
