--- a/assets/HtmlErrorRenderer/styles.css
+++ b/assets/HtmlErrorRenderer/styles.css
@@ -2,7 +2,7 @@
  * +---------------------------------------------------------------------+
  * | CODE INC. SOURCE CODE                                               |
  * +---------------------------------------------------------------------+
- * | Copyright (c) 2017 - 2018 - Code Inc. SAS - All Rights Reserved.    |
+ * | Copyright (c) 2017 - Code Inc. SAS - All Rights Reserved.           |
  * | Visit https://www.codeinc.fr for more information about licensing.  |
  * +---------------------------------------------------------------------+
  * | NOTICE:  All information contained herein is, and remains the       |
@@ -16,7 +16,7 @@
  * Author:   Joan Fabrégat <joan@codeinc.fr>
  * Date:     19/02/2018
  * Time:     14:14
- * Project:  ErrorRenderer
+ * Project:  lib-errordisplay
  */
 
 div.exception-report {
@@ -77,6 +77,8 @@ div.exception-report div.exception > div.exception-trace strong:before {
 	transition: transform 300ms ease;
 	font-size: 10px;
 	margin-right: 7px;
+	position: relative;
+	bottom: 1px;
 }
 div.exception-report div.exception > div.exception-trace.closed strong:before {
 	transform: rotate(0);
