--- a/assets/HtmlErrorRenderer/styles.css
+++ b/assets/HtmlErrorRenderer/styles.css
@@ -2,7 +2,7 @@
  * +---------------------------------------------------------------------+
  * | CODE INC. SOURCE CODE                                               |
  * +---------------------------------------------------------------------+
- * | Copyright (c) 2017 - 2018 - Code Inc. SAS - All Rights Reserved.
+ * | Copyright (c) 2017 - 2018 - Code Inc. SAS - All Rights Reserved.    |
  * | Visit https://www.codeinc.fr for more information about licensing.  |
  * +---------------------------------------------------------------------+
  * | NOTICE:  All information contained herein is, and remains the       |
