--- a/assets/HtmlErrorRenderer/styles.css
+++ b/assets/HtmlErrorRenderer/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*
  * +---------------------------------------------------------------------+
  * | CODE INC. SOURCE CODE                                               |
@@ -24,13 +25,14 @@ div.exception-report {
 	background: #97040C;
 	border-bottom-width: 5px;
 	margin: 15px;
-	padding: 15px;
+	padding: 10px 20px;
 	color: #fff;
 	font-size: 14px;
 	list-style: decimal;
 	text-align: left;
 	max-width: 1000px;
 	min-width: 400px;
+	box-shadow: 0 0 20px rgba(0, 0, 0, .25);
 }
 div.exception-report div.exception-title {
 	padding: 3px;
@@ -46,13 +48,17 @@ div.exception-report div.exception-title:last-of-type {
 	margin-bottom: 0;
 }
 div.exception-report div.exception {
-	margin: 10px;
+	border: 1px solid #97040C;
+	padding: 10px;
+	margin: 10px 0;
+	transition: all 300ms ease;
+	border: 1px solid rgba(255, 255, 255, .1);
+}
+div.exception-report div.exception:hover {
+	border: 1px solid rgba(255, 255, 255, .25);
 }
 div.exception-report div.exception-previous {
-	margin: 40px 30px 0;
-}
-div.exception-report div.exception-previous div.exception {
-	margin-bottom: 30px;
+	margin: 0 25px;
 }
 div.exception-report div.exception > span.exception-class {
 	white-space: nowrap;
@@ -65,26 +71,33 @@ div.exception-report div.exception > span.exception-location {
 div.exception-report .exception-location {
 	font-size: .7em;
 	opacity: .7;
-	/*font-style: italic;*/
 }
-div.exception-report div.exception > div.exception-trace strong {
+div.exception-report div.exception > div.exception-trace {
+	transition: all 300ms ease;
+	margin: 5px -10px -10px;
 	cursor: pointer;
+	padding: 5px 10px;
+}
+div.exception-report div.exception > div.exception-trace.closed:hover,
+div.exception-report div.exception > div.exception-trace:not(.closed) {
+	background-color: rgba(255, 255, 255, .1);
+}
+div.exception-report div.exception > div.exception-trace:not(.closed) {
+	padding: 8px 10px;
+	margin: 10px -10px -10px;
 }
 div.exception-report div.exception > div.exception-trace strong:before {
 	content: '▶';
 	display: inline-block;
-	transform: rotate(90deg);
-	transition: transform 300ms ease;
+	transition: all 300ms ease;
 	font-size: 10px;
 	margin-right: 7px;
+}
+div.exception-report div.exception > div.exception-trace:not(.closed) strong:before {
+	transform: rotate(90deg);
 	position: relative;
 	bottom: 1px;
-}
-div.exception-report div.exception > div.exception-trace.closed strong:before {
-	transform: rotate(0);
-}
-div.exception-report div.exception > div.exception-trace {
-	margin-top: 20px;
+	/*margin-right: 10px;*/
 }
 div.exception-report div.exception > div.exception-trace.closed ol {
 	display: none;
